services/iam/iam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  namespace: iam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iam
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: iam
    spec:
      containers:
        - name: app
          image: verseghy/iam
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
          #livenessProbe:
          #  httpGet:
          #    path: /liveness
          #    port: 3001
          #  initialDelaySeconds: 300
          #  failureThreshold: 5
          #readinessProbe:
          #  httpGet:
          #    path: /readiness
          #    port: 3001
          #  initialDelaySeconds: 10
          #  timeoutSeconds: 5
          resources:
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: iam
  namespace: iam
spec:
  selector:
    app: iam
  ports:
    - name: iam
      protocol: TCP
      port: 80
      targetPort: 3001
