services/iam/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: iam
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: iam
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:6.2-alpine
          name: redis
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
          resources:
            limits:
              memory: 128Mi
      volumes:
        - name: data
          emptyDir: { }
        - name: config
          configMap:
            name: redis
            items:
              - key: redis-config
                path: redis.conf
